--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         }
 
         body {
-            background-size: cover; /* Ensure the image covers the entire background */
-            background-position: center; /* Center the background image */
+            background-size: cover;
+            background-position: center; 
             background-attachment: fixed; /* Optional: Keeps the background image fixed while scrolling */
-            color: white; /* Ensures text remains visible on the image */
+            color: white;
             font-family: 'Berlin Sans FB', Arial, sans-serif;
         }
 
         footer {
-            background-size: cover; /* Ensure the image covers the entire background */
-            background-position: center; /* Center the background image */
+            background-size: cover;
+            background-position: center;
             color: white;
             text-align: center;
             padding: 10px 0;
